# bulls-cows-api

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/worker/: package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
apps/worker/public/: index.html
apps/worker/public/assets/bc/v1/: manifest.json
apps/worker/src/: assetStore.ts  cryptoToken.ts  errors.ts  index.ts  json.ts  router.ts  treeReader.ts  types.ts  validation.ts  ws.ts
apps/worker/src/api/: duel.ts  errorsInfo.ts  feedback.ts  human.ts  meta.ts  pvp.ts  solve.ts
apps/worker/src/strategies/: registry.ts
apps/worker/src/wasm/: bindings.ts  wasm.d.ts
apps/worker/src/wasm/pkg/: bc_worker_wasm.d.ts  bc_worker_wasm.js  bc_worker_wasm_bg.wasm  bc_worker_wasm_bg.wasm.d.ts  package.json
apps/worker/test/: api.test.ts  treeReader.test.ts
crates/core/: Cargo.toml
crates/core/src/: bitset.rs  candidate.rs  dynamic_solver.rs  error.rs  feedback.rs  lib.rs  strategy.rs
crates/core/tests/: core_tests.rs
crates/worker_wasm/: Cargo.toml
crates/worker_wasm/src/: lib.rs
spec/: api.md  asset-format.md  strategy.md
tests/: api-blackbox.ts  node-compat.d.ts  tsconfig.json
tools/asset-inspect/: package.json
tools/asset-inspect/src/: index.ts
tools/precompute-cpp/: CMakeLists.txt
tools/precompute-cpp/src/: bitset.hpp  candidate.hpp  feedback.hpp  main.cpp  manifest_writer.hpp  strategy.hpp  tree_builder.hpp  tree_pack.hpp  verify.hpp
tools/precompute-cpp/tests/: test_feedback.cpp  test_pack.cpp
